--- a/src/IvyFEMProtoApp/IvyFEMProtoApp/AlertWindow.xaml
+++ b/src/IvyFEMProtoApp/IvyFEMProtoApp/AlertWindow.xaml
@@ -6,5 +6,5 @@
         xmlns:local="clr-namespace:IvyFEMProtoApp"
         mc:Ignorable="d"
         Title="AlertWindow" Height="300" Width="300" FontFamily="MS Gothic">
-    <TextBox x:Name="textBox1" Margin="0,0,2,-2" TextWrapping="Wrap" IsReadOnly="True" IsReadOnlyCaretVisible="True" VerticalScrollBarVisibility="Auto"/>
+    <TextBox x:Name="TextBox1" Margin="0,0,2,-2" TextWrapping="Wrap" IsReadOnly="True" IsReadOnlyCaretVisible="True" VerticalScrollBarVisibility="Auto"/>
 </Window>
