--- a/src/IvyFEMProtoApp/IvyFEMProtoApp/MainWindow.xaml
+++ b/src/IvyFEMProtoApp/IvyFEMProtoApp/MainWindow.xaml
@@ -101,7 +101,11 @@
                     <MenuItem Header="H-Plane Waveguide (Time Domain)(PML)(2)" Click="HPlaneWaveguidePMLTD2Btn_Click"/>
                     <MenuItem Header="H-Plane Waveguide (Time Domain)(PML)(3,Open)" Click="HPlaneWaveguidePMLTD3Btn_Click"/>
                 </MenuItem>
-
+                <MenuItem Header="ElectroMagnetic(Waveguide2D Eigen)">
+                    <MenuItem Header="Waveguide 2D Eigen(1)" Click="Waveguide2DEigen1Btn_Click"/>
+                    <MenuItem Header="Waveguide 2D Eigen(2)" Click="Waveguide2DEigen2Btn_Click"/>
+                    <MenuItem Header="Waveguide 2D Eigen(3)" Click="Waveguide2DEigen3Btn_Click"/>
+                </MenuItem>
                 <MenuItem Header="Photonic Crystal(Eigen)">
                     <MenuItem Header="PC Waveguide(Eigen)(Square Lattice)" Click="SquareLatticePCWaveguideEigen1Btn_Click"/>
                     <MenuItem Header="PC Waveguide(Eigen)(Triangle Lattice)" Click="TriangleLatticePCWaveguideEigen1Btn_Click"/>
