--- a/src/IvyFEMProtoApp/IvyFEMProtoApp/MainWindow.xaml
+++ b/src/IvyFEMProtoApp/IvyFEMProtoApp/MainWindow.xaml
@@ -110,6 +110,13 @@
                     <MenuItem Header="Waveguide 2D Eigen 2nd Order(2)" Click="Waveguide2DEigen2ndOrder2Btn_Click"/>
                     <MenuItem Header="Waveguide 2D Eigen 2nd Order(3)" Click="Waveguide2DEigen2ndOrder3Btn_Click"/>
                 </MenuItem>
+                <MenuItem Header="ElectroMagnetic(Waveguide2D Eigen,Open)">
+                    <MenuItem Header="Waveguide 2D Eigen Open(2)" Click="Waveguide2DEigenOpen2Btn_Click"/>
+                    <MenuItem Header="Waveguide 2D Eigen Open(3)" Click="Waveguide2DEigenOpen3Btn_Click"/>
+                    <Separator/>
+                    <MenuItem Header="Waveguide 2D Eigen 2nd Order(2)" Click="Waveguide2DEigenOpen2ndOrder2Btn_Click"/>
+                    <MenuItem Header="Waveguide 2D Eigen 2nd Order(3)" Click="Waveguide2DEigenOpen2ndOrder3Btn_Click"/>
+                </MenuItem>
                 <MenuItem Header="Photonic Crystal(Eigen)">
                     <MenuItem Header="PC Waveguide(Eigen)(Square Lattice)" Click="SquareLatticePCWaveguideEigen1Btn_Click"/>
                     <MenuItem Header="PC Waveguide(Eigen)(Triangle Lattice)" Click="TriangleLatticePCWaveguideEigen1Btn_Click"/>
